fixed table alignment

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     text-align: center;
 }
 
-ul {
+.box {
     width: 90%;
     height: 80px;
     color: green;
@@ -13,6 +13,7 @@ ul {
     display: inline-flex;
     justify-content: center;
     margin: 0;
+    padding: 0;
 }
 
 .half {
@@ -20,5 +21,32 @@ ul {
     width: 50%;
     height: 100%;
     border: 1px solid black;
-    padding: 0px;
+}
+
+.thirds {
+    display: inline-flex;
+    width: 33.3%;
+    height: 100%;
+    border: 1px solid black;
+}
+
+.fourths {
+    display: inline-flex;
+    width: 25%;
+    height: 100%;
+    border: 1px solid black;
+}
+
+footer {
+    width: 90%;
+    height: 60px;
+    border: 1px solid black;
+    display: inline-flex;
+    justify-content: center;
+}
+
+#submit {
+    width: 380px;
+    height: 35px;
+    margin-top: 20px;
 }
